Edited wiki page through web user interface.

--- a/wiki/GenTrees.wiki
+++ b/wiki/GenTrees.wiki
@@ -1,7 +1,7 @@
 #summary generate tree instancing positions based on shapefiles
 
 = Introduction =
-||<wiki:toc max_depth="1" />||Using the GPU instancing we can create thousands of trees with very little cpu usage. This application generates a texturemap that will contain the positions for all trees based on the given shapefile. The application can also remove trees from the "position texture" based on shapefiles used as masks. For example a shapefile that describes the road positions is well suited for this, we don't want trees in the middle of the road.||||<wiki:video url="http://www.youtube.com/watch?v=Mmhd8UtP0l8">
+||<wiki:toc max_depth="1" />||Using the GPU instancing we can create thousands of trees with very little cpu usage. This application generates a texturemap that will contain the positions for all trees based on the given shapefile. The application can also remove trees from the "position texture" based on shapefiles used as masks. For example a shapefile that describes the road positions is well suited for this, we don't want trees in the middle of the road.||<wiki:video url="http://www.youtube.com/watch?v=Mmhd8UtP0l8">||
 
 = Details =
 
