Edited wiki page osgHelpOverview through web user interface.

--- a/wiki/osgHelpOverview.wiki
+++ b/wiki/osgHelpOverview.wiki
@@ -6,4 +6,4 @@ The osgHelp is a collection of small projects to help understand the different a
 
   * *AnimationPath* - by creating control points you can use the osg::AnimationPath to move your model from control point to control point.
   * *AntialiasedLines* - Shows what is needed to make lines antialiased (note that this is only antialiasing at the primitive level)
-  * *Artucykated* - an example that shows how to load vehicle and animated a certain subnode contain inside the vehicle.
+  * *Articulated* - an example that shows how to load vehicle and animated a certain subnode contain inside the vehicle.
